--- a/3 - non_graded_exercise_2.ipynb
+++ b/3 - non_graded_exercise_2.ipynb
@@ -28,20 +28,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random # You need this module to select a word randomly\n",
+    "import random \n",
     "\n",
-    "# Create a list of words that the game can choose from and then ask the user to guess \n",
-    "word_list = []\n",
+    "# Display the current state of the guessed word\n",
+    "def display_word(word, guessed_letters):\n",
+    "    return ' '.join(letter if letter in guessed_letters else '_' for letter in word)\n",
     "\n",
-    "# Store in this variable a random word from the above word_list\n",
-    "word_to_guess = \n",
+    "def hangman_game():\n",
+    "    print(\"Welcome to Hangman\")\n",
     "\n",
-    "# Complete the rest of the code. You will have to use the different methods you have learned so far. \n",
-    "\n"
+    "    word_list = [\"happyness\", \"sweety\", \"scse\", \"oritation\", \"introduction\",\"ife\"]\n",
+    "    \n",
+    "    # Pick a random word from the list\n",
+    "    word_to_guess = random.choice(word_list)\n",
+    "    \n",
+    "    # Initialize game variables\n",
+    "    attempts_left = 10\n",
+    "    guessed_letters = set()\n",
+    "    \n",
+    "    while attempts_left > 0:\n",
+    "        # Display current state of the guessed word\n",
+    "        print(f\"Attempts left: {attempts_left}\")\n",
+    "        print(f\"Word: {display_word(word_to_guess, guessed_letters)}\")\n",
+    "        \n",
+    "        # Ask the user for a guess\n",
+    "        guess = input(\"Enter a single letter: \").lower()\n",
+    "        \n",
+    "        # Validate input\n",
+    "        if not guess.isalpha() or len(guess) != 1:\n",
+    "            print(\"Invalid Character. Please enter a single letter.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Check if the letter has already been guessed\n",
+    "        if guess in guessed_letters:\n",
+    "            print(\"You have already guessed that letter.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Add the letter to guessed letters\n",
+    "        guessed_letters.add(guess)\n",
+    "        \n",
+    "        # Check if the letter is in the word\n",
+    "        if guess in word_to_guess:\n",
+    "            print(f\"Correct! The letter '{guess}' is in the word.\")\n",
+    "            \n",
+    "            # Check if the entire word has been guessed\n",
+    "            if set(word_to_guess) == guessed_letters:\n",
+    "                print(f\"Awesome! You guessed the word correctly: {word_to_guess}\")\n",
+    "                break\n",
+    "        else:\n",
+    "            # Reduce the number of attempts left if the guess is wrong\n",
+    "            attempts_left -= 1\n",
+    "            print(f\"Wrong! The letter '{guess}' is not in the word.\")\n",
+    "    \n",
+    "    # End of game message\n",
+    "    if attempts_left == 0:\n",
+    "        print(f\"Thank you for playing. Better luck next time. The word was: {word_to_guess}\")\n",
+    "    else:\n",
+    "        print(\"Thank you for playing. See you next time\")\n",
+    "\n",
+    "# Run the game\n",
+    "if __name__ == \"__main__\":\n",
+    "    hangman_game()"
    ]
   }
  ],
@@ -61,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
