--- a/2 - pointers_for_exercise_2.ipynb
+++ b/2 - pointers_for_exercise_2.ipynb
@@ -9,11 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, Character: H\n",
+      "Index: 1, Character: o\n",
+      "Index: 2, Character: w\n",
+      "Index: 3, Character: l\n",
+      "Index: 4, Character: '\n",
+      "Index: 5, Character: s\n",
+      "Index: 6, Character:  \n",
+      "Index: 7, Character: M\n",
+      "Index: 8, Character: o\n",
+      "Index: 9, Character: v\n",
+      "Index: 10, Character: i\n",
+      "Index: 11, Character: n\n",
+      "Index: 12, Character: g\n",
+      "Index: 13, Character:  \n",
+      "Index: 14, Character: C\n",
+      "Index: 15, Character: a\n",
+      "Index: 16, Character: s\n",
+      "Index: 17, Character: t\n",
+      "Index: 18, Character: l\n",
+      "Index: 19, Character: e\n"
+     ]
+    }
+   ],
    "source": [
-    "str1 = \"Howl's Moving Castle\"\n"
+    "str1 = \"Howl's Moving Castle\"\n",
+    "for index, char in enumerate(str1):\n",
+    "    print(f\"Index: {index}, Character: {char}\")"
    ]
   },
   {
@@ -25,12 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baa baa black sheep\n"
+     ]
+    }
+   ],
    "source": [
     "some_list = ['Baa', 'baa', 'black', 'sheep']\n",
-    "\n"
+    "# Join the elements of the list with a space as the separator\n",
+    "result = ' '.join(some_list)\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -42,21 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sheep\n"
+      "black\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
+    "some_list = ['Baa', 'baa', 'black', 'sheep']\n",
     "\n",
+    "# Select a random element from the list\n",
+    "random_element = random.choice(some_list)\n",
     "\n",
-    "some_list = ['Baa', 'baa', 'black', 'sheep']\n"
+    "print(random_element)"
    ]
   }
  ],
@@ -76,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
